[gd_scene load_steps=9 format=2]

[ext_resource path="res://Objects/tileset-1.tscn" type="PackedScene" id=1]
[ext_resource path="res://Objects/Player/obj_Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Rooms/cutsceneTest01.gd" type="Script" id=3]
[ext_resource path="res://Objects/CutsceneSystem-TextHandler.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sprites/Resource files/TextBox-Olimac.tres" type="SpriteFrames" id=5]
[ext_resource path="res://Sprites/Resource files/TextBox-Inverted-Olimac.tres" type="SpriteFrames" id=6]
[ext_resource path="res://SFX Files/HD SFX - Macrofago soundbyte.wav" type="AudioStream" id=7]
[ext_resource path="res://SFX Files/textOlimac.wav" type="AudioStream" id=8]

[node name="cutsceneTest01" type="Node2D"]
script = ExtResource( 3 )
textWriter = NodePath("CutsceneSystem-TextHandler")
portraits = [ ExtResource( 5 ), ExtResource( 6 ) ]
voices = [ ExtResource( 8 ), ExtResource( 7 ) ]

[node name="TileMap" parent="." instance=ExtResource( 1 )]
tile_data = PoolIntArray( -524291, 2, 1, -524290, 2, 65536, -524289, 2, 65536, -589824, 2, 65536, -589823, 2, 65536, -589822, 2, 65536, -589821, 2, 65536, -589820, 2, 65536, -589819, 2, 65536, -589818, 2, 65536, -589817, 2, 65536, -589816, 2, 65536, -589815, 2, 65536, -589814, 2, 65536, -589813, 2, 65536, -589812, 2, 65536, -589811, 2, 65536, -589810, 2, 65536, -589809, 2, 65536, -589808, 2, 65536, -589807, 2, 65536, -589806, 2, 65536, -589805, 2, 65536, -589804, 2, 65536, -589803, 2, 65536, -589802, 2, 65536, -589801, 2, 65536, -589800, 2, 65536, -589799, 2, 65536, -589798, 2, 65536, -589797, 2, 65536, -589796, 2, 65536, -589795, 2, 65536, -589794, 2, 65536, -589793, 2, 65536, -589792, 2, 65536, -589791, 2, 65536, -589790, 2, 65536, -589789, 2, 65536, -589788, 2, 65536, -589787, 2, 65536, -589786, 2, 65536, -589785, 2, 65536, -589784, 2, 65536, -589783, 2, 2, -458755, 2, 131073, -458754, 2, 196619, -458753, 2, 196619, -524288, 2, 196619, -524287, 2, 3, -524286, 2, 131072, -524285, 2, 131072, -524284, 2, 131072, -524283, 2, 131072, -524282, 2, 131072, -524281, 2, 131072, -524280, 2, 131072, -524279, 2, 131072, -524278, 2, 131072, -524277, 2, 131072, -524276, 2, 131072, -524275, 2, 131072, -524274, 2, 131072, -524273, 2, 131072, -524272, 2, 131072, -524271, 2, 131072, -524270, 2, 131072, -524269, 2, 131072, -524268, 2, 131072, -524267, 2, 131072, -524266, 2, 131072, -524265, 2, 131072, -524264, 2, 131072, -524263, 2, 131072, -524262, 2, 131072, -524261, 2, 131072, -524260, 2, 131072, -524259, 2, 131072, -524258, 2, 131072, -524257, 2, 131072, -524256, 2, 131072, -524255, 2, 131072, -524254, 2, 131072, -524253, 2, 131072, -524252, 2, 131072, -524251, 2, 131072, -524250, 2, 4, -524249, 2, 196619, -524248, 2, 196619, -524247, 2, 131074, -393219, 2, 131073, -393218, 2, 196619, -393217, 2, 196619, -458752, 2, 196619, -458751, 2, 131074, -458714, 2, 131073, -458713, 2, 196619, -458712, 2, 196619, -458711, 2, 131074, -327683, 2, 131073, -327682, 2, 196619, -327681, 2, 196619, -393216, 2, 196619, -393215, 2, 131074, -393178, 2, 131073, -393177, 2, 196619, -393176, 2, 196619, -393175, 2, 131074, -262147, 2, 131073, -262146, 2, 196619, -262145, 2, 196619, -327680, 2, 196619, -327679, 2, 131074, -327642, 2, 131073, -327641, 2, 196619, -327640, 2, 196619, -327639, 2, 131074, -196611, 2, 131073, -196610, 2, 196619, -196609, 2, 196619, -262144, 2, 196619, -262143, 2, 131074, -262106, 2, 65537, -262105, 2, 131072, -262104, 2, 131072, -262103, 2, 65538, -131075, 2, 131073, -131074, 2, 196619, -131073, 2, 196619, -196608, 2, 196619, -196607, 2, 131074, -65539, 2, 131073, -65538, 2, 196619, -65537, 2, 196619, -131072, 2, 196619, -131071, 2, 131074, -3, 2, 131073, -2, 2, 3, -1, 2, 131072, -65536, 2, 131072, -65535, 2, 65538, 65533, 2, 131073, 65534, 2, 131074, 131069, 2, 131073, 131070, 2, 131074, 65571, 2, 1, 65572, 2, 65536, 65573, 2, 65536, 65574, 2, 65536, 65575, 2, 65536, 65576, 2, 65536, 65577, 2, 2, 196605, 2, 131073, 196606, 2, 131074, 131107, 2, 131073, 131108, 2, 196619, 131109, 2, 196619, 131110, 2, 196619, 131111, 2, 196619, 131112, 2, 196619, 131113, 2, 131074, 262141, 2, 131073, 262142, 2, 131074, 196643, 2, 131073, 196644, 2, 196619, 196645, 2, 196619, 196646, 2, 196619, 196647, 2, 196619, 196648, 2, 196619, 196649, 2, 131074, 327677, 2, 131073, 327678, 2, 65539, 327679, 2, 65536, 262144, 2, 65536, 262145, 2, 65536, 262146, 2, 65536, 262147, 2, 65536, 262148, 2, 65536, 262149, 2, 65536, 262150, 2, 65536, 262151, 2, 65536, 262152, 2, 65536, 262153, 2, 65536, 262154, 2, 65536, 262155, 2, 65536, 262156, 2, 65536, 262157, 2, 65536, 262158, 2, 65536, 262159, 2, 65536, 262160, 2, 65536, 262161, 2, 65536, 262162, 2, 65536, 262163, 2, 65536, 262164, 2, 65536, 262165, 2, 65536, 262166, 2, 65536, 262167, 2, 65536, 262168, 2, 65536, 262169, 2, 65536, 262170, 2, 65536, 262171, 2, 65536, 262172, 2, 65536, 262173, 2, 65536, 262174, 2, 65536, 262175, 2, 65536, 262176, 2, 65536, 262177, 2, 65536, 262178, 2, 65536, 262179, 2, 65540, 262180, 2, 196619, 262181, 2, 196619, 262182, 2, 196619, 262183, 2, 196619, 262184, 2, 196619, 262185, 2, 131074, 393213, 2, 131073, 393214, 2, 196619, 393215, 2, 196619, 327680, 2, 196619, 327681, 2, 196619, 327682, 2, 196619, 327683, 2, 196619, 327684, 2, 196619, 327685, 2, 196619, 327686, 2, 196619, 327687, 2, 196619, 327688, 2, 196619, 327689, 2, 196619, 327690, 2, 196619, 327691, 2, 196619, 327692, 2, 196619, 327693, 2, 196619, 327694, 2, 196619, 327695, 2, 196619, 327696, 2, 196619, 327697, 2, 196619, 327698, 2, 196619, 327699, 2, 196619, 327700, 2, 196619, 327701, 2, 196619, 327702, 2, 196619, 327703, 2, 196619, 327704, 2, 196619, 327705, 2, 196619, 327706, 2, 196619, 327707, 2, 196619, 327708, 2, 196619, 327709, 2, 196619, 327710, 2, 196619, 327711, 2, 196619, 327712, 2, 196619, 327713, 2, 196619, 327714, 2, 196619, 327715, 2, 196619, 327716, 2, 196619, 327717, 2, 196619, 327718, 2, 196619, 327719, 2, 196619, 327720, 2, 196619, 327721, 2, 131074, 458749, 2, 65537, 458750, 2, 131072, 458751, 2, 131072, 393216, 2, 131072, 393217, 2, 131072, 393218, 2, 131072, 393219, 2, 131072, 393220, 2, 131072, 393221, 2, 131072, 393222, 2, 131072, 393223, 2, 131072, 393224, 2, 131072, 393225, 2, 131072, 393226, 2, 131072, 393227, 2, 131072, 393228, 2, 131072, 393229, 2, 131072, 393230, 2, 131072, 393231, 2, 131072, 393232, 2, 131072, 393233, 2, 131072, 393234, 2, 131072, 393235, 2, 131072, 393236, 2, 131072, 393237, 2, 131072, 393238, 2, 131072, 393239, 2, 131072, 393240, 2, 131072, 393241, 2, 131072, 393242, 2, 131072, 393243, 2, 131072, 393244, 2, 131072, 393245, 2, 131072, 393246, 2, 131072, 393247, 2, 131072, 393248, 2, 131072, 393249, 2, 131072, 393250, 2, 131072, 393251, 2, 131072, 393252, 2, 131072, 393253, 2, 131072, 393254, 2, 131072, 393255, 2, 131072, 393256, 2, 131072, 393257, 2, 65538 )

[node name="obj_Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 40, 80 )

[node name="CutsceneSystem-TextHandler" parent="." instance=ExtResource( 4 )]
position = Vector2( -120, -128 )
